# tas

./: .gitignore
xd/: Cargo.toml  README.md  config.toml.example  docker-compose.yml  src.tar
xd/docs/: architecture.md  project_documentation.md
xd/scripts/: run_demo2.ps1
xd/src/: lib.rs
xd/src/app/: alarm_service.rs  mod.rs
xd/src/bus/: mod.rs
xd/src/db/: mod.rs
xd/src/domain/: mod.rs
xd/src/ingress/: can.rs  mod.rs  serial.rs  tcp.rs
xd/src/protocol/: demo_serial.rs  mod.rs
xd/src/session/: mod.rs
xd/src/signal/: mod.rs
xd/src/transport/: can.rs  mod.rs
