[package]
name = "demo2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
biquad = "0.5"
bytes = "1"
dashmap = "6"
eframe = "0.33"
egui_plot = "0.34"
futures-util = "0.3"
libloading = "0.8"
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sysinfo = "0.37"
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_System_LibraryLoader"] }

[dev-dependencies]
rand = "0.9"
winit = "0.30"
